[gd_scene load_steps=8 format=2]

[ext_resource path="res://Box.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Dummy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlayerStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/LabelChooser.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 32 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 16.0

[node name="Dummy" type="KinematicBody2D"]
collision_mask = 2147483648
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.23872e-07, 0 )
scale = Vector2( 1.04348, 1 )
texture = ExtResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="LabelChooser" parent="." instance=ExtResource( 5 )]
which_label = 2

[node name="PlayerStats" parent="." instance=ExtResource( 4 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[editable path="HurtBox"]
